--- a/Rock_Paper_Scissor/index.html
+++ b/Rock_Paper_Scissor/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Game</title>
+</head>
+<body>
+ 
+
+  <h1>Rock Paper Scissors</h1>
+
+  <div class="choices">
+    <div class="choice" id="rock">
+      <img class="one" src="rock.png" alt="">
+    </div> 
+    
+    <div class="choice" id="paper">
+      <img class="two" src="paper.png" alt="">
+    </div> 
+    
+    <div class="choice" id="scissors">
+      <img class="three" src="scissors.png" alt="">
+    </div> 
+</div>
+
+<div class="score-board">
+  <div class="score" id="user">
+    <p id="user">0</p>
+    <p>You</p>
+  </div>
+
+  <div class="score" id="comp">
+    <p id="comp">0</p>
+    <p>Comp</p>
+  </div>
+</div>
+
+
+<div class="msj">
+  <p class="msg" id="message">Play Your Move</p>
+</div>
+  
+<script src="script.js"></script>
+</body>
+</html>
 
